# ACMBot

./: .env.prod  .gitignore  LuoguQuery.py  NewcoderQuery.py  README.md  bot.py  go.mod  go.sum  main.go  pyproject.toml  test.go
app/: config.go  logger.go
app/bot/: bot.go  context.go  main.go  tasks.go
app/bot/message/: gensokyo.go  message.go
app/bot/qq/: zerobot.go
app/errs/: errs.go
app/fetcher/: atcoder.go  atcoder_test.go  clist.go  codeforces.go  races.go  types.go
app/helper/: bitmap.go  chain_context.go  helper.go  rate_limiter.go
app/manager/: atcoder.go  cached_race.go  codeforces.go  qq.go  races.go
app/model/: helper.go  providers.go  race.go
app/model/cache/: atcoder.go  cache.go  codeforces.go  race.go
app/model/db/: action.go  atcoder.go  codeforces.go  connection.go  db.go  qq.go  qq_test.go
app/model/errs/: errs.go
app/model/fetcher/: atcoder.go  atcoder_test.go  codeforces.go  races.go  types.go
app/model/manager/: codeforces.go  manager.go  qq.go  races.go
app/model/render/: codeforces.go  init.go  render.go  types.go
app/render/: atcoder.go  codeforces.go  init.go  rank.go  render.go  types.go
app/templates/: atcoder_profile.html  codeforces_profile.html  codeforces_profile_v1.html  codeforces_profile_v2.html  codeforces_rating_change.html  qq_group_rank.html
app/types/: codeforces.go  db.go  qqbind.go
app/utils/: strings.go
app/utils/cleaner/: cleaner.go
app/utils/config/: config.go
app/utils/logger/: logger.go
app/utils/slice/: slice.go
db/: db.dbml
plugins/hyc_race/: API.py  RaceInfo.py  __init__.py  models.py  mysql.py
src/: codeforces.go  config.go  remote.go
src/internal/api/: status.go  user.go
src/internal/img/: config.go
src/plugins/ACMRaceBot/: API.py  __init__.py  (+2 more)
(+3 files in other folders)
